--- a/less/index.less
+++ b/less/index.less
@@ -1,4 +1,7 @@
 // Import your less files here:
+@import url('https://fonts.googleapis.com/css?family=Russo+One&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Ubuntu&display=swap');
+
 @import 'variables.less';
 @import 'mixins.less';
 @import 'reset.less';
