--- a/css/index.css
+++ b/css/index.css
@@ -159,6 +159,9 @@ h5 {
   font-family: 'Russo One', sans-serif;
   color: #23293B;
 }
+h1 {
+  font-size: 3.8rem;
+}
 h2 {
   font-size: 3.2rem;
 }
@@ -173,6 +176,29 @@ p {
   max-width: 800px;
   width: 100%;
   margin: 0 auto;
+}
+.nav-and-logo {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  height: 100px;
+  background-color: #f0f1f3;
+}
+nav {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+nav a {
+  margin-left: 30px;
+  font-size: 1.6rem;
+  text-decoration: none;
+  color: black;
+  font-weight: 550;
+}
+nav a:first-child {
+  margin-left: none;
 }
 footer {
   color: #22283B;
