--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,27 @@
 // Navigation code here
+.nav-and-logo {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    height: 100px;
+    background-color: rgb(240, 241, 243);
+}
+
+nav {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+
+    a {
+        margin-left: 30px;
+        font-size: 1.6rem;
+        text-decoration: none;
+        color: black;
+        font-weight: 550;
+
+        &:first-child {
+            margin-left: none;
+        }
+    }
+}
