--- a/css/index.css
+++ b/css/index.css
@@ -177,6 +177,18 @@ p {
   width: 100%;
   margin: 0 auto;
 }
+.btn {
+  background-color: black;
+  color: white;
+  padding: 10px 15px;
+  font-weight: bold;
+  width: 32%;
+  font-size: 2rem;
+  border-radius: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .nav-and-logo {
   display: flex;
   flex-direction: column;
