--- a/less/global.less
+++ b/less/global.less
@@ -40,3 +40,15 @@ p {
   margin: 0 auto;  
 }
 
+.btn {
+  background-color: black;
+  color: white;
+  padding: 10px 15px;
+  font-weight: bold;
+  width: 32%;
+  font-size: 2rem;
+  border-radius: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
