--- a/less/global.less
+++ b/less/global.less
@@ -41,14 +41,5 @@ p {
 }
 
 .btn {
-  background-color: black;
-  color: white;
-  padding: 10px 15px;
-  font-weight: bold;
-  width: 32%;
-  font-size: 2rem;
-  border-radius: 5px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  .btn-styler();
 }
