--- a/less/home-page.less
+++ b/less/home-page.less
@@ -11,6 +11,14 @@
     p {
       padding:0 15px;
     }
+
+    @media @phone {
+      img {
+        max-height: 150px;
+        border-radius: 5px;
+        max-width: 100%;
+      }
+    }
   
   }
 
@@ -24,7 +32,19 @@
       margin: 20px 2.5%;
       border-radius: 20px;
       height: 100%;
+
+      @media @phone {
+        display: none;
+
+        &:first-child {
+          display: inherit;
+          width: 100%;
+          }
+      }
+      
+      
     }
+
   }
 
   .visit-planets {
@@ -46,8 +66,19 @@
     display: flex;
     justify-content: center;
 
+    @media @phone {
+      flex-direction: column-reverse;
+      padding: 50px 15px;
+      padding-top: 20px;
+    }
+
     .walk-text {
       width: 50%;
+
+      @media @phone {
+        width: 100%;
+        margin-top: 15px;
+      }
 
       h3 {
         margin-bottom: 10px;
@@ -57,8 +88,6 @@
         margin-bottom: 26px;
       }
 
-      .btn {
-      }
     }
 
     .walk-img {
@@ -70,6 +99,13 @@
         height: auto;
         border-radius: 10px;
       }
+
+      @media @phone {
+        width: 100%;
+        margin-left: 0px;
+      }
     }
+
+    
   }
 }// home
